# humpback-whale-identification

./: .flake8  README.md  pyproject.toml
.dvc/: config
config/: infer.yaml  main.yaml
config/data/: default.yaml
config/hardware/: default.yaml
config/log/: default.yaml
config/model/: default.yaml
config/train/: default.yaml
config/train/callbacks/: default.yaml
dvc_store/: data.dvc  experiments.dvc
examples/: predictions.csv
humpback_whale/: __init__.py  __main__.py
humpback_whale/src/: export.py  infer.py  setup.py  train.py  utils.py
humpback_whale/src/data/: dataset.py  module.py  transforms.py
humpback_whale/src/model/: arc_margin_product.py  encoder.py  identifier.py  mean_average_precision.py
